Testing a fix for stretched images on mobile

--- a/templates/mobile-awareness/styles/landing.css
+++ b/templates/mobile-awareness/styles/landing.css
@@ -214,7 +214,6 @@ html {
   }
   .mobile-awareness-landing-inspiration-images img {
     display: block;
-    height: 100%;
   }
 }
 
